--- a/01-javascript/assets/js/HOF/high-order-functions-01.css
+++ b/01-javascript/assets/js/HOF/high-order-functions-01.css
@@ -3,3 +3,8 @@ h2 {
     text-decoration: wavy;
     color: chocolate;
 }
+h1 {
+    text-align: center;
+    text-decoration: wavy;
+    color: blue;
+}
