--- a/01-javascript/assets/js/HOF/high-order-functions-01.css
+++ b/01-javascript/assets/js/HOF/high-order-functions-01.css
@@ -11,5 +11,6 @@ h1 {
 .mmm {
     border-style: solid;
     border-color: blue;
-    border-radius: 2 px;
+    border-radius: 20 px;
+    border
 }
